[package]
name = "polkadot-simnet"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
support = { package = "frame-support", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
collective = { package = "pallet-collective", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
democracy = { package = "pallet-democracy", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

test-runner = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-sig-para" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.23"

[dev-dependencies]
log = "0.4.14"
