[package]
name = "polkadot-simnet-test"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate primitives
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
balances = { package = "pallet-balances", git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

# substrate client libs
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

# polkadot deps
polkadot-simnet = { path = "../common" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
