[package]
name = "polkadot-simnet-test"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate primitives
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
balances = { package = "pallet-balances", git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# substrate client libs
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# polkadot deps
polkadot-simnet = { path = "../common" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
